python3 is enough for bootstrap

--- a/training/bootstrap-playbook.yml
+++ b/training/bootstrap-playbook.yml
@@ -15,7 +15,7 @@
       raw: "{{ item }}"
       loop:
         - sudo apt-get update
-        - sudo apt-get -y install python
+        - sudo apt-get -y install python3
   tasks:
     - name: Set SSH keys for root
       authorized_key:
