--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -6,7 +6,8 @@
   tasks:
     - name: disable qxl
       include_role:
-        name: kypo-disable-qxl
+        name: disable-qxl
+      when: ansible_os_family == 'Debian'
 
     - name: Set SSH keys for root
       authorized_key:
